--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "cra-tailwind-starter",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "yarn run build:css && react-scripts start",
+    "build": "yarn run build:css && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:css": "postcss src/css/index.src.css -o src/css/index.css",
+    "watch:css": "postcss src/css/index.src.css -o src/css/index.css -w",
+    "dev": "concurrently \"yarn watch:css --silent\" \"yarn start --silent\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,5 +30,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.2.0",
+    "autoprefixer": "^9.6.0",
+    "concurrently": "^4.1.1",
+    "cssnano": "^4.1.10",
+    "postcss-cli": "^6.1.2",
+    "tailwindcss": "^1.0.4"
   }
 }
