--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.31",
   "private": false,
   "dependencies": {
-    "react": "16.13.0",
-    "react-dom": "16.13.0",
-    "react-scripts": "3.4.0"
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "yarn run build:css && react-scripts start",
+    "start": "react-scripts start",
     "build": "yarn run build:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build:css": "postcss src/css/index.src.css -o src/css/index.css",
     "watch:css": "postcss src/css/index.src.css -o src/css/index.css -w",
-    "dev": "concurrently \"yarn watch:css --silent\" \"yarn start --silent\""
+    "dev": "concurrently -k -p \"[{name}]\" -n \"Tailwind,React\" -c \"cyan.bold,blue.bold\" \"yarn watch:css\" \"yarn start\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,11 +32,10 @@
     ]
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "2.1.0",
-    "autoprefixer": "9.7.4",
-    "concurrently": "5.1.0",
+    "autoprefixer": "9.8.4",
+    "concurrently": "5.2.0",
     "cssnano": "4.1.10",
-    "postcss-cli": "7.1.0",
-    "tailwindcss": "1.2.0"
+    "postcss-cli": "7.1.1",
+    "tailwindcss": "1.4.6"
   }
 }
