--- a/renovate.json
+++ b/renovate.json
@@ -1,12 +1,8 @@
-  
 {
-  "assignees": ["impulse"],
   "automerge": true,
   "major": {
-    "automerge": false
+    "automerge": true
   },
   "bumpVersion": "patch",
-  "extends": [
-    "config:base"
-  ]
+  "extends": ["config:base"]
 }
